--- a/vignettes/c060_vignette.Rnw
+++ b/vignettes/c060_vignette.Rnw
@@ -49,7 +49,7 @@ of selected features and in assessing the prediction performance of a model and 
 efficient and offer the possibility of speeding up computing time through parallel computing. Another feature which can drastically reduce computing time is an efficient interval-search algorithm,
 which we have implemented for selecting the optimal parameter combination for elastic-net penalties. These functions have been useful in our daily work at the
 Biostatistics department (C060) of the German Cancer Research Center where prognostic modelling of patient survival data is of particular interest.
-Although we focus on a survival data application of penalized Cox models in this article, the functions in our \proglang{R} package are applicable to all types of regression models implemented in the \pkg{glmnet} package.
+Although we focus on a survival data application of penalized Cox models in this article, the functions in our \proglang{R} package are in general applicable to all types of regression models implemented in the \pkg{glmnet} package, except for prediction error curves, which are only defined for survival data.
 
 }
 \Keywords{\pkg{glmnet}, penalized log-likelihood method, stability selection, interval search, prediction error}
@@ -110,6 +110,9 @@ Computational efficiency is an important requirement of the software to make app
 
 We provide \proglang{R} functions to perform stability selection \citep{MeinshausenBuehlmann2010} in a computationally efficient way which allows to select the most stable features at a given Type I error level. We have also implemented an approach to select the optimal parameter combination ($\alpha$, $\lambda$) for elastic-net penalties using an interval-search algorithm \citep{froehlich2005} which is often faster and more accurate than a standard grid search \citep{Jones1998}. Another very useful addition for real-life applications of \pkg{glmnet} \citep{glmnet} for building risk-prediction models is the provision of wrapper functions to allow the computation of resampling-based prediction errors within the framework of the \proglang{R} package \pkg{peperr} \citep{Porz2009}. The \pkg{peperr} package makes it computationally feasible to assess the
 predictive accuracy of a penalized regression model via resampling methods even for very large-scale applications by employing parallel computing. We also provide the possibility to speed up stability selection by parallel computing using the functionalities of the \proglang{R} base package \pkg{parallel} \citep{R11}.
+
+Stability selection is currently defined for gaussian, binomial, poisson, multinomial and cox models, interval search for ...., prediction error curves for cox models and classification errors for
+binomial models. Since all functions are basically wrapped around the \pkg{glmnet} fitting or cross-validation function call, the type of response is always specified with the \code{family} argument. 
 
 The software is available as \proglang{R} package \pkg{c060} on CRAN (URL \url{http://cran.r-project.org/web/packages/c060/}, version 0.2 at time of manuscript submission).
 
@@ -409,10 +412,15 @@ Model performance measures for classification tasks shipped with the \pkg{peperr
 calculation for the \pkg{glmnet} algorithm, and defined AUC under the ROC curve (\code{aggregation.auc}) as an additional performance measure.
 For binary responses, the \pkg{peperr} package does not quite provide the same modular flexibility 
 as for time-to-event endpoints. The predicted class probability is calculated within the generic performance/aggregation function by calling the algorithm-specific predict function. Whenever a new algorithm is incorporated, the generic aggregation function needs to be adapted accordingly.
+
+An alternative implementation of the time-dependent Brier score can be found in the package \pkg{pec} \citep{MIG2012}. The basic approach is similar to \pkg{peperr}, you have to define a wrapper for each fitting procedure in order to determine the estimated survival probabilities. Similar to \pkg{peperr}, no wrapper for \pkg{glmnet} is provided yet. The main difference is that in \pkg{peperr} the tuning of the hyper-parameter and the fitting procedure are done in two separate steps, which more reflects the usual workflow for high-dimensional data analysis. \pkg{pec} on the other hand provides additional functionalities such as the time-dependent c-index in addition to the Brier score but cannot assess classification models. Of course, prediction accuracy of survival models can be assessed differently. Time-dependent ROC and AUC curves are another approach for which different implementations exist provided for example in \proglang{R} packages \pkg{timeROC} \citep{timeROC}, \pkg{survivalROC} \citep{survivalROC} and \pkg{risksetROC} \citep{risksetROC}. The advantage of \pkg{peperr} and \pkg{pec} over most of the other packages is their easy-to-use resampling setup.
+
+For classification models, there are numerous \proglang{R} and Bioconductor packages available to assess models fitted with \pkg{glmnet}. A good starting point is the package \pkg{caret} \citep{caret}.
+
 %\clearpage
 \subsection{Stability selection}
 
-So far implementations of stability selection can be found in the packages \pkg{s4vd}, \citep{s4vd,sill2011robust}, \pkg{mboost} \citep{mboost}, \pkg{lol} \citep{lol} and \pkg{BioMark} \citep{BioMark}. While in the package \pkg{s4vd} the stability selection is applied to sparse singular value decomposition in the context of biclustering, the \pkg{mboost} package offers stability selection for model based boosting. The implementation in the \pkg{lol} package is based on penalized, generalized linear models available through the package \pkg{penalized} \citep{penalized}.  As both the \pkg{penalized} and the \pkg{glmnet} package offer penalized models for survival, poisson, binary and gaussian response variables, the stability selection in \pkg{lol} is most comparable to our implemetation. Due to the computational efficiency of the coordinate descent algorithm in \pkg{glment} it is probably more appropriate for complex resampling methdos like the stability selection. Morevoer, the code for the stability selection in the \pkg{lol} package is not yet parallelized and does not offer the possibility to compute the whole stability path. The \pkg{BioMark} package offers an implementation of the stability selection for partial least squares (PLS), principal component regression (PCR), variable importance of projection (VIP) and logistic and gaussian \pkg{glmnet} models. Until know the \pkg{BioMark} package allows only to calculate selection frequencies and does not provide type I error control nor the 'randomized lasso' as described in \citet{MeinshausenBuehlmann2010}. \\
+So far implementations of stability selection can be found in the packages \pkg{s4vd}, \citep{s4vd,sill2011robust}, \pkg{mboost} \citep{mboost}, \pkg{lol} \citep{lol} and \pkg{BioMark} \citep{BioMark}. While in the package \pkg{s4vd} the stability selection is applied to sparse singular value decomposition in the context of biclustering, the \pkg{mboost} package offers stability selection for model based boosting. The implementation in the \pkg{lol} package is based on penalized, generalized linear models available through the package \pkg{penalized} \citep{penalized}.  As both the \pkg{penalized} and the \pkg{glmnet} package offer penalized models for survival, poisson, binary and gaussian response variables, the stability selection in \pkg{lol} is most comparable to our implemetation. Due to the computational efficiency of the coordinate descent algorithm in \pkg{glmnet} it is probably more appropriate for complex resampling methdos like the stability selection. Morevoer, the code for the stability selection in the \pkg{lol} package is not yet parallelized and does not offer the possibility to compute the whole stability path. The \pkg{BioMark} package offers an implementation of the stability selection for partial least squares (PLS), principal component regression (PCR), variable importance of projection (VIP) and logistic and gaussian \pkg{glmnet} models. Until now the \pkg{BioMark} package allows only to calculate selection frequencies and does not provide type I error control nor the 'randomized lasso' as described in \citet{MeinshausenBuehlmann2010}. \\
 
 Here we use stability selection to identify prognostic features which have a relevant influence on the survival times of the patients in the AML data set and to control Type I errors to ensure that the features identified are truly associated with the survival times.
 To calculate the stability path for the $L_1$-penalized Cox regression we use the function \code{stabpath} from our \proglang{R} package. Via the \code{weakness} argument of the function \code{stabpath} it is possible to induce additional randomization by reweighting the penalization of each feature. In brief, in each subsampling step the individual penalization of each feature is randomized such that it lies in the range of $[\lambda,\lambda/\kappa]$, where $\kappa$ is represented by the \code{weakness} parameter which indicates the amount of this additional randomization. The weights $w_{i},\cdots,w_{p}$ to reweight each $\lambda_{i}$ by $\lambda_{i}/w_{i}$ are generated by sampling from a uniform distribution, i.e. $w_{i} \sim \mathcal{U}(\kappa,1)$. \citet{MeinshausenBuehlmann2010} call this additional randomization 'randomized lasso' and showed that it greatly improves the variable selection performance of the stability selection. The function \code{stabpath} draws subsets and calculates in parallel the stability path, e.g., the selection probabilities of each feature along the range of possible penalization parameter values. For parallelization we use the package \pkg{parallel}, which has been a base package since \proglang{R} version 2.14.0. On Unix-like systems the parallelization is done by forking via the function \code{mclapply} whereas under Windows systems socket clusters are used. 
