added table for function overview, minor bib changes
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/c060@137 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/vignettes/c060.bib
+++ b/vignettes/c060.bib
@@ -45,10 +45,10 @@
 }
 
 @MANUAL{timeROC,
-  title = {timeROC: Time-dependent ROC curve and AUC for censored survival data},
+  title = {\pkg{timeROC}: Time-dependent ROC curve and AUC for censored survival data},
   author = {Paul Blanche},
   year = {2013},
-  note = {R package version 0.2},
+  note = {\proglang{R} package version 0.2},
   url = {http://CRAN.R-project.org/package=timeROC}
 }
 
@@ -231,19 +231,19 @@
 }
 
 @MANUAL{survivalROC,
-  title = {survivalROC: Time-dependent ROC curve estimation from censored survival
+  title = {\pkg{survivalROC}: Time-dependent ROC curve estimation from censored survival
 	data},
   author = {Patrick J. Heagerty and packaging by Paramita Saha-Chaudhuri},
   year = {2013},
-  note = {R package version 1.0.3},
+  note = {\proglang{R} package version 1.0.3},
   url = {http://CRAN.R-project.org/package=survivalROC}
 }
 
 @MANUAL{risksetROC,
-  title = {risksetROC: Riskset ROC curve estimation from censored survival data},
+  title = {\pkg{risksetROC}: Riskset ROC curve estimation from censored survival data},
   author = {Patrick J. Heagerty and packaging by Paramita Saha-Chaudhuri},
   year = {2012},
-  note = {R package version 1.0.4},
+  note = {\proglang{R} package version 1.0.4},
   url = {http://CRAN.R-project.org/package=risksetROC}
 }
 
@@ -257,11 +257,11 @@
 }
 
 @MANUAL{caret,
-  title = {caret: Classification and Regression Training},
+  title = {\pkg{caret}: Classification and Regression Training},
   author = {Max Kuhn. Contributions from Jed Wing and Steve Weston and Andre
 	Williams and Chris Keefer and Allan Engelhardt and Tony Cooper},
   year = {2013},
-  note = {R package version 5.17-7},
+  note = {\proglang{R} package version 5.17-7},
   url = {http://CRAN.R-project.org/package=caret}
 }
 
