--- a/vignettes/c060_vignette.Rnw
+++ b/vignettes/c060_vignette.Rnw
@@ -560,6 +560,34 @@ plot(sumint,type="points")
 \caption{\label{fig:interval_search2} The distribution of initial and visited points of the interval search plotted in chronological order. The interval search is employed to identify the optimal parameter value combination ($\alpha$,$\lambda$) for the elastic-net Cox model fitted to the AML data set.}
 \end{figure}
 
+\begin{center}
+\begin{table}
+\small
+\begin{tabular}{|p{4cm}|p{10cm}|l|l|}
+\hline                        
+Function & Description \\
+\hline
+\code{PLL.coxnet} & Predictive partial log-likelihood for glmnet Cox PH model fit\\ 
+\code{aggregation.auc} & Determine the area under the ROC curve for a fitted model\\
+\code{complexity.glmnet} & Interface for determination of penalty lambda in penalized regression model via cross-validation\\
+\code{fit.glmnet} & Interface function for fitting a penalized regression model with 'glmnet'\\
+\code{plot.peperr.curves} & Plot method for prediction error curves of a peperr object\\
+\code{predictProb.coxnet} &  Extract predicted survival probabilities from a coxnet fit \\
+\code{predictProb.glmnet} & Extract predicted survival probabilities from a glmnet fit \\
+\hline
+\code{stabpath} & calculates the stability path for gaussian, binomial, poisson, multinomial and cox \code{glmnet} models\\
+\code{stabsel} & estimates a stable set of variables and allows to control the PFER, PCER or FWER\\
+\code{plot.stabpath} & displays stability path and indicates estimated stable features\\
+\hline
+\code{EPSGO}              &Finds an optimal solution\\
+\code{summary.int.search}  &Summary method for interval search models\\
+\code{tune.glmnet.interval} &Wrapper function for 'glmnet' objects.\\
+\code{plot.summary.int.search} &Plot Summary object for interval search models\\
+\hline
+\end{tabular}
+\caption{\label{tab:functions} Overview of available functions. The first block shows functions to calculate and visualize resampling based prediction error curves for penalized Cox models. The second block shows all provided functions to perform interval search and the last block functions to perform stability selection.}
+\end{table}
+\end{center}
 %\clearpage
 \section{Conclusions and outlook}
 The programming language and statistical computing environment \proglang{R} provides a highly useful framework for statistical data analysis and modelling. It is the dominating statistical software in many areas, for example in molecular biology and molecular medicine, which is largely due to the highly successful Bioconductor project \citep{Bioconductor}, which provides tools for the analysis and comprehension of high-throughput genomic data. Due to the open-source nature of \proglang{R} and Bioconductor, many very useful software packages have been developed by \proglang{R} users and made available for the entire \proglang{R} community. One example is the \pkg{glmnet} package, which  implements an efficient state-of-the-art algorithm for fitting penalized Cox and generalized linear models.
