--- a/vignettes/c060_vignette.Rnw
+++ b/vignettes/c060_vignette.Rnw
@@ -526,7 +526,7 @@ At the initial step we sample 21 points in the parameter space. Those points are
 <<interval_search_cox_fit_opt, echo=FALSE,results=hide>>=
 #select the model with optimal parameters from the object fit
 opt.model <- sumint$opt.models[[1]]
-cofn <- get.cofn.int.search(opt.model)
+cofn <- coef.optmodel(opt.model)
 @
 
 The final elastic-net model contains \Sexpr{length(cofn)} selected features, which obviously reflects much less sparsity than the final lasso model.
@@ -569,7 +569,7 @@ Function & Description \\
 \hline
 \code{PLL.coxnet} & Predictive partial log-likelihood for glmnet Cox PH model fit\\ 
 \code{aggregation.auc} & Determine the area under the ROC curve for a fitted model\\
-\code{complexity.glmnet} & Interface for determination of penalty lambda in penalized regression model via cross-validation\\
+\code{complexity.glmnet} & Interface for determination of penalty lambda in penalized regression model via cross-validation\\ 
 \code{fit.glmnet} & Interface function for fitting a penalized regression model with 'glmnet'\\
 \code{plot.peperr.curves} & Plot method for prediction error curves of a peperr object\\
 \code{predictProb.coxnet} &  Extract predicted survival probabilities from a coxnet fit \\
