--- a/vignettes/c060.bib
+++ b/vignettes/c060.bib
@@ -45,7 +45,8 @@
 }
 
 @MANUAL{timeROC,
-  title = {\pkg{timeROC}: Time-dependent ROC curve and AUC for censored survival data},
+  title = {\pkg{timeROC}: Time-dependent ROC curve and AUC for censored survival
+	data},
   author = {Paul Blanche},
   year = {2013},
   note = {\proglang{R} package version 0.2},
@@ -231,8 +232,8 @@
 }
 
 @MANUAL{survivalROC,
-  title = {\pkg{survivalROC}: Time-dependent ROC curve estimation from censored survival
-	data},
+  title = {\pkg{survivalROC}: Time-dependent ROC curve estimation from censored
+	survival data},
   author = {Patrick J. Heagerty and packaging by Paramita Saha-Chaudhuri},
   year = {2013},
   note = {\proglang{R} package version 1.0.3},
@@ -240,7 +241,8 @@
 }
 
 @MANUAL{risksetROC,
-  title = {\pkg{risksetROC}: Riskset ROC curve estimation from censored survival data},
+  title = {\pkg{risksetROC}: Riskset ROC curve estimation from censored survival
+	data},
   author = {Patrick J. Heagerty and packaging by Paramita Saha-Chaudhuri},
   year = {2012},
   note = {\proglang{R} package version 1.0.4},
@@ -256,15 +258,6 @@
   url = {http://CRAN.R-project.org/package=mboost}
 }
 
-@MANUAL{caret,
-  title = {\pkg{caret}: Classification and Regression Training},
-  author = {Max Kuhn. Contributions from Jed Wing and Steve Weston and Andre
-	Williams and Chris Keefer and Allan Engelhardt and Tony Cooper},
-  year = {2013},
-  note = {\proglang{R} package version 5.17-7},
-  url = {http://CRAN.R-project.org/package=caret}
-}
-
 @ARTICLE{Jones1998,
   author = {Jones, D and Schonlau, M and Welch, W},
   title = {Efficient Global Optimization of Expensive Black-Box Functions},
@@ -272,6 +265,15 @@
   year = {1998},
   volume = {13},
   pages = {455--492}
+}
+
+@MANUAL{caret,
+  title = {\pkg{caret}: Classification and Regression Training},
+  author = {Max Kuhn, contributions from Jed Wing and Steve Weston and Andre
+	Williams and Chris Keefer and Allan Engelhardt and Tony Cooper},
+  year = {2013},
+  note = {\proglang{R} package version 5.17-7},
+  url = {http://CRAN.R-project.org/package=caret}
 }
 
 @ARTICLE{MeinshausenBuehlmann2010,
